Switched to Java 8